--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "al": "./bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier --config ./.prettierrc.json --write **/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,20 @@
   "devDependencies": {
     "chalk": "^4.0.0",
     "commander": "^5.0.0",
-    "fs-extra": "^9.0.0"
+    "fs-extra": "^9.0.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
+    "prettier": "^2.0.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js}": [
+      "npm run prettier",
+      "git add"
+    ]
   }
 }
