--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "al": "./bin/index.js"
   },
   "scripts": {
+    "validate": "echo \"run eslint\"",
     "prettier": "prettier --config ./.prettierrc.json --write **/*.js"
   },
   "repository": {
@@ -38,5 +39,8 @@
       "npm run prettier",
       "git add"
     ]
+  },
+  "dependencies": {
+    "p-queue-ts": "^1.0.0"
   }
 }
