tool: Remove git add from lint-staged

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   },
   "lint-staged": {
     "*.{js}": [
-      "npm run prettier",
-      "git add"
+      "npm run prettier"
     ]
   },
   "dependencies": {
